--- a/includes/css/screen.css
+++ b/includes/css/screen.css
@@ -23,13 +23,15 @@ select { padding: 5px; font-size: 35px; }
 select option { padding: 10px; }
 button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: pointer; }
 .actions button { margin: 0 10px 0 0; font-size: 15px; }
-.actions a { margin: 0 10px 0 0; padding: 5px; background: #357bb2; color: #fff; font-size: 15px; }
+.actions a { padding: 5px; background: #357bb2; color: #fff; font-size: 15px; }
+.actions a, .actions button { margin: 0 5px; }
+.actions a:first-child, .actions button:first-child { margin-left: 0; }
 .actions button.active { background: #333; }
 .actions form { display: none; padding: 10px; background: #333; }
 .actions form button { margin-left: 7px; }
 .actions.show form { display: block; }
 
-.message h2 { padding: 10px; background: orange; font-size: 20px; font-weight: bold; color: #fff; border-radius: 4px; box-shadow: 0 0 10px #999;}
+.message h2 { padding: 10px; background: orange; font-size: 20px; font-weight: bold; color: #fff; border-radius: 4px; box-shadow: 0 0 10px #999; cursor: pointer; }
 
 .formOption { margin: 0 0 15px; }
 .formOption label { display: inline-block; width: 200px; }
@@ -38,6 +40,7 @@ button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: p
 .list ul { margin: 0; padding: 0 0 7px; background: #ccc; }
 .list li { padding: 5px 7px; }
 .list li div { margin-left: 10px; padding: 5px 7px; clear: none; float: left; background: #fff; position: relative; }
+.list li .action { padding: 0 7px; }
 .list li div .mobile { display: none; color: #aaa;}
 .list li.definition div { background: #ccc; color: #333; font-weight: bold; }
 .list li div:first-child { margin-left: 0; }
@@ -49,27 +52,50 @@ button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: p
 .list li .status .maybe { background: yellow; }
 
 /* users page -- multiple user view */
+.users .list li div { height: 23px; max-height: 23px; }
 .users .list li .name { width: 270px; }
 .users .list li .email { width: 270px; }
-.users .list li .email .btn { padding: 0 5px; position: absolute; right: 7px; font-size: 12px; background: #555; color: #fff; border-radius: 4px; }
-.users .list li .codes { width: 220px; }
-.users .list li .status { width: 70px; }
+.users .list li .email .btn { padding: 3px 5px; font-size: 12px; color: #fff; border-radius: 4px; background: #357bb2; }
+.users .list li .collection { width: 300px; }
 
 /* users page -- single user view */
-.user table { width: 100%; }
-.user .cell { border-spacing: 10px; border-collapse: collapse; padding: 30px 0; width: 50%; }
-.user .spacer { width: 20px; }
-.user .cell.name { background: #555; color: #fff; }
+.user .cell { width: 450px; vertical-align: text-bottom}
+.user .cell.name { margin-right: 20px; padding: 20px 0; background: #555; color: #fff; }
 .user .cell.name p, .user .cell.name h2 { margin: 0 30px; }
 .user .cell.name p { margin-bottom: 10px; }
 .user .cell.name h2 { font-size: 40px; font-weight: bold; line-height: 100%;}
-.user .cell.info p { padding: 5px; font-size: 15px; background: #ccc; color: #333; }
+.user .cell.info { }
+.user .cell.info p { margin-bottom: 10px; padding: 5px; font-size: 15px; background: #ccc; color: #333; }
 
 .user .list li .name { width: 270px; }
 .user .list li .email { width: 270px; }
 .user .list li .email .btn { padding: 0 5px; position: absolute; right: 7px; font-size: 12px; background: #555; color: #fff; border-radius: 4px; }
 .user .list li .codes { width: 220px; }
 .user .list li .status { width: 70px; }
+
+/* single user issue list */
+.user li .ownership span { display: inline-block; border-radius: 4px; font-size: 12px; color: #fff; cursor: pointer; }
+.user li .ownership .active { background: green; }
+.user li .ownership .inactive { background: #bbb; }
+
+/* single user code list */
+.user .codes li .code { width: 270px; }
+.user .codes li .issued { width: 270px; }
+.user .codes li .redeemed { width: 270px; }
+.user .codes li .redeemed button { padding: 0 7px; border-radius: 4px; font-size: 12px; cursor: pointer; }
+
+.user .list.issues li .id { width: 40px; }
+.user .list.issues li .name { width: 200px; }
+.user .list.issues li .collections { width: 530px; }
+.user .list.issues li .ownership { width: 60px; }
+
+/* single user device list */
+.user .devices li div { height: 23px; }
+.user .devices li .uuid { width: 100px; }
+.user .devices li .registered { width: 270px; }
+.user .devices li .last { width: 270px; }
+.user .devices li .remove { width: 150px; }
+.user .devices li .remove button { padding: 0 7px; border-radius: 4px; font-size: 12px; cursor: pointer; }
 
 /* issues page */
 .issues .list li .id { width: 40px; }
@@ -87,9 +113,9 @@ button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: p
 .admin .list li .email { width: 600px; }
 
 /* public page */
-legend { margin-bottom: 25px; font-size: 40px; font-weight: bold; color: #333; line-height: 100%; }
-input[type="text"] { padding: 5px; background: #333; color: #ccc; font-size: 15px; border: none; }
-.formHelp { font-weight: bold; color: #555; }
+.public legend { margin-bottom: 25px; font-size: 40px; font-weight: bold; color: #333; line-height: 100%; }
+.public input[type="text"] { padding: 5px; background: #333; color: #ccc; font-size: 15px; border: none; }
+.public .formHelp { font-weight: bold; color: #555; }
 
 
 @media screen and (max-width: 949px) {
