--- a/includes/css/screen.css
+++ b/includes/css/screen.css
@@ -9,6 +9,10 @@ header { margin-bottom: 25px; background: #555; color: #fff; }
 header h1 { padding: 25px 0; }
 header h1 span { color: #ccc; }
 
+.formButtonRow { margin-top: 20px; padding-top: 20px; padding-left: 200px; border-top: 1px dotted #999; }
+
+.add_user h2 { margin-bottom: 20px; font-size: 20px; font-weight: bold; }
+
 .cell { display: inline-block; }
 
 .tools ul { background: #eee; }
@@ -74,9 +78,9 @@ button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: p
 .user .list li .status { width: 70px; }
 
 /* single user issue list */
-.user li .ownership span { display: inline-block; border-radius: 4px; font-size: 12px; color: #fff; cursor: pointer; }
-.user li .ownership .active { background: green; }
-.user li .ownership .inactive { background: #bbb; }
+.user li .ownership span, .add_user li .ownership span { display: inline-block; border-radius: 4px; font-size: 12px; color: #fff; cursor: pointer; }
+.user li .ownership .active, .add_user li .ownership .active { background: green; }
+.user li .ownership .inactive, .add_user li .ownership .inactive { background: #bbb; }
 
 /* single user code list */
 .user .codes li .code { width: 270px; }
@@ -84,10 +88,10 @@ button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: p
 .user .codes li .redeemed { width: 270px; }
 .user .codes li .redeemed button { padding: 0 7px; border-radius: 4px; font-size: 12px; cursor: pointer; }
 
-.user .list.issues li .id { width: 40px; }
-.user .list.issues li .name { width: 200px; }
-.user .list.issues li .collections { width: 530px; }
-.user .list.issues li .ownership { width: 60px; }
+.user .list.issues li .id, .add_user .list.issues li .id { width: 40px; }
+.user .list.issues li .name, .add_user .list.issues li .name { width: 200px; }
+.user .list.issues li .collections, .add_user .list.issues li .collections { width: 770px; }
+.user .list.issues li .ownership, .add_user .list.issues li .ownership { width: 60px; }
 
 /* single user device list */
 .user .devices li div { height: 23px; }
@@ -109,14 +113,15 @@ button { padding: 5px; background: #357bb2; color: #fff; border: none; cursor: p
 
 /* admin page */
 .admin .list li .id { width: 30px; }
-.admin .list li .name { width: 230px; }
-.admin .list li .email { width: 600px; }
+.admin .list li .name { width: 200px; }
+.admin .list li .email { width: 350px; }
+.admin .list li .organization { width: 140px; }
+.admin .list li .level { width: 90px; }
 
 /* public page */
 .public legend { margin-bottom: 25px; font-size: 40px; font-weight: bold; color: #333; line-height: 100%; }
 .public input[type="text"] { padding: 5px; background: #333; color: #ccc; font-size: 15px; border: none; }
-.public .formHelp { font-weight: bold; color: #555; }
-
+.formHelp { font-weight: bold; color: #555; }
 
 @media screen and (max-width: 949px) {
 
